@@ -1,3 +1,7 @@
+2011-07-05  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/diagnostic/aka1.C: New.
+
 2011-07-05  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* ada/acats/run_acats (which): Extract last field from type -p,
