@@ -1,3 +1,7 @@
+2011-07-05  Jason Merrill  <jason@redhat.com>
+
+	* error.c (type_to_string): Avoid redundant akas.
+
 2011-06-27  Jason Merrill  <jason@redhat.com>
 
 	PR c++/49528
